Fix app startup flicker ab#584

--- a/src/Client/Shared/wwwroot/app.scss
+++ b/src/Client/Shared/wwwroot/app.scss
@@ -6,12 +6,15 @@
 
 //Shared==============================================
 
-body {
-    margin: 0;
-    padding: 0;
+html {
     user-select: none;
     -webkit-user-select: none;
     overscroll-behavior: none;
+}
+
+body {
+    margin: 0;
+    padding: 0;
     font-family: $open-sans-regular;
     -webkit-tap-highlight-color: transparent;
 
